force-app/main/default/objects/Menu__c/Menu__c.object-meta.xml
<CustomObject>
    <label>メニュー</label>
    <nameField>
        <label>メニューID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>