force-app/main/default/objects/Menu__c/fields/accounting_date__c.field-meta.xml
<CustomField>
    <fullName>accounting_date__c</fullName>
    <label>売上計上月</label>
    <type>Date</type>
</CustomField>