force-app/main/default/objects/Menu__c/fields/ad_feature__c.field-meta.xml
<CustomField>
    <fullName>ad_feature__c</fullName>
    <label>広告特集名</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>baitai_name__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ad_feature</valueSetName>
    </valueSet>
</CustomField>