force-app/main/default/objects/Menu__c/fields/ad_imp_guarantee__c.field-meta.xml
<CustomField>
    <fullName>ad_imp_guarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>クリック保証型純広</label>
    <type>Checkbox</type>
</CustomField>