force-app/main/default/objects/Menu__c/fields/ad_thema__c.field-meta.xml
<CustomField>
    <fullName>ad_thema__c</fullName>
    <label>広告で取り扱うもの</label>
    <length>255</length>
    <type>Text</type>
</CustomField>