force-app/main/default/objects/Menu__c/fields/ad_type__c.field-meta.xml
<CustomField>
    <fullName>ad_type__c</fullName>
    <label>広告種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ad_type</valueSetName>
    </valueSet>
</CustomField>