force-app/main/default/objects/Menu__c/fields/address_seikyu1__c.field-meta.xml
<CustomField>
    <fullName>address_seikyu1__c</fullName>
    <formula>custom_opportunity__r.clent_name__r.address_seikyu1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求先住所①</label>
    <type>Text</type>
</CustomField>