force-app/main/default/objects/Menu__c/fields/address_seikyu2__c.field-meta.xml
<CustomField>
    <fullName>address_seikyu2__c</fullName>
    <formula>IF(custom_opportunity__r.agency_name__c == null,custom_opportunity__r.clent_name__r.address_seikyu2__c,custom_opportunity__r.agency_name__r.address_seikyu2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求先住所②</label>
    <type>Text</type>
</CustomField>