force-app/main/default/objects/Menu__c/fields/agency_fee2__c.field-meta.xml
<CustomField>
    <fullName>agency_fee2__c</fullName>
    <formula>agency_fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>実績スナップショット用</inlineHelpText>
    <label>代理店手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>