force-app/main/default/objects/Menu__c/fields/agency_fee__c.field-meta.xml
<CustomField>
    <fullName>agency_fee__c</fullName>
    <formula>agency_margin_number__c * magazine_fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>掲載料金（グロス、税別）×代理店マージン</inlineHelpText>
    <label>代理店手数料（メニュー）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>