force-app/main/default/objects/Menu__c/fields/agency_margin__c.field-meta.xml
<CustomField>
    <fullName>agency_margin__c</fullName>
    <label>代理店マージン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>直</fullName>
            </value>
            <value>
                <fullName>0％</fullName>
            </value>
            <value>
                <fullName>15％</fullName>
            </value>
            <value>
                <fullName>20％</fullName>
            </value>
            <value>
                <fullName>30％</fullName>
            </value>
            <value>
                <fullName>40％</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>