force-app/main/default/objects/Menu__c/fields/agency_margin_number__c.field-meta.xml
<CustomField>
    <fullName>agency_margin_number__c</fullName>
    <formula>CASE(TEXT(agency_margin__c),
&#39;直&#39;,0,
&#39;0％&#39;,0,
&#39;15％&#39;,0.15,
&#39;20％&#39;,0.20,
&#39;30％&#39;,0.30,
&#39;40％&#39;,0.40,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店マージン(数値)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>