force-app/main/default/objects/Menu__c/fields/assign__c.field-meta.xml
<CustomField>
    <fullName>assign__c</fullName>
    <label>有識者起用の希望</label>
    <type>TextArea</type>
</CustomField>