force-app/main/default/objects/Menu__c/fields/assign_text__c.field-meta.xml
<CustomField>
    <fullName>assign_text__c</fullName>
    <label>その他必要項目</label>
    <type>TextArea</type>
</CustomField>