force-app/main/default/objects/Menu__c/fields/assignment_request_complete__c.field-meta.xml
<CustomField>
    <fullName>assignment_request_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>アサイン依頼完了</label>
    <type>Checkbox</type>
</CustomField>