force-app/main/default/objects/Menu__c/fields/baitai_name__c.field-meta.xml
<CustomField>
    <fullName>baitai_name__c</fullName>
    <label>媒体名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>baitai_name</valueSetName>
    </valueSet>
</CustomField>