force-app/main/default/objects/Menu__c/fields/bikou__c.field-meta.xml
<CustomField>
    <fullName>bikou__c</fullName>
    <label>備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>