force-app/main/default/objects/Menu__c/fields/budget_closing_date__c.field-meta.xml
<CustomField>
    <fullName>budget_closing_date__c</fullName>
    <label>予算締め日</label>
    <type>Date</type>
</CustomField>