force-app/main/default/objects/Menu__c/fields/Budget_date__c.field-meta.xml
<CustomField>
    <fullName>Budget_date__c</fullName>
    <formula>magazine_type__r.yosansimebi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>予算締め日</label>
    <type>Date</type>
</CustomField>