force-app/main/default/objects/Menu__c/fields/campaign__c.field-meta.xml
<CustomField>
    <fullName>campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>キャンペーン</label>
    <type>Checkbox</type>
</CustomField>