force-app/main/default/objects/Menu__c/fields/campaign_check_checkbox__c.field-meta.xml
<CustomField>
    <fullName>campaign_check_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>キャンペーン管理_確認しましたチェックボックス</label>
    <type>Checkbox</type>
</CustomField>