force-app/main/default/objects/Menu__c/fields/campaign_end_date__c.field-meta.xml
<CustomField>
    <fullName>campaign_end_date__c</fullName>
    <label>キャンペーン_終了日</label>
    <type>Date</type>
</CustomField>