force-app/main/default/objects/Menu__c/fields/campaign_start_date__c.field-meta.xml
<CustomField>
    <fullName>campaign_start_date__c</fullName>
    <label>キャンペーン_開始日</label>
    <type>Date</type>
</CustomField>