force-app/main/default/objects/Menu__c/fields/carry_date__c.field-meta.xml
<CustomField>
    <fullName>carry_date__c</fullName>
    <formula>magazine_type__r.hannyubi__c</formula>
    <label>搬入日</label>
    <type>Date</type>
</CustomField>