force-app/main/default/objects/Menu__c/fields/choku_keiyakugaku__c.field-meta.xml
<CustomField>
    <fullName>choku_keiyakugaku__c</fullName>
    <formula>IF ( ISPICKVAL ( menu_status__c , &quot;成約&quot; ) &amp;&amp; ISBLANK ( customers_type__c ) , total_fee2__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>メニューの状態：が 成約 かつ 代理店フラグに&quot;代理店&quot;という文字列が含まれない場合、総額請求金・契約金額（税抜、メニュー）</inlineHelpText>
    <label>直契約額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>