force-app/main/default/objects/Menu__c/fields/clicks__c.field-meta.xml
<CustomField>
    <fullName>clicks__c</fullName>
    <label>クリック数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>