force-app/main/default/objects/Menu__c/fields/client_name__c.field-meta.xml
<CustomField>
    <fullName>client_name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; + custom_opportunity__r.clent_name__r.Id + &quot;/view&quot;, custom_opportunity__r.clent_name__r.Name,&quot;_blank&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>社名</label>
    <type>Text</type>
</CustomField>