force-app/main/default/objects/Menu__c/fields/client_tag__c.field-meta.xml
<CustomField>
    <fullName>client_tag__c</fullName>
    <label>広告主支給タグ個数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>