force-app/main/default/objects/Menu__c/fields/client_task__c.field-meta.xml
<CustomField>
    <fullName>client_task__c</fullName>
    <label>広告主の課題</label>
    <type>TextArea</type>
</CustomField>