force-app/main/default/objects/Menu__c/fields/common_amount_divede__c.field-meta.xml
<CustomField>
    <fullName>common_amount_divede__c</fullName>
    <inlineHelpText>共通費(按分後)の積み上げ集計</inlineHelpText>
    <label>共通費（按分後、メニュー）</label>
    <summarizedField>SeisakuSiharai__c.common_amount_divede__c</summarizedField>
    <summaryForeignKey>SeisakuSiharai__c.menu__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>