force-app/main/default/objects/Menu__c/fields/contract_money_tax__c.field-meta.xml
<CustomField>
    <fullName>contract_money_tax__c</fullName>
    <formula>magazine_fee_billing_amount__c + product_fee2__c * ( 1 + tax_rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>掲載料金・契約金請求金額（税別、メニュー）+制作費・講師派遣料（税抜、メニュー）×（1+消費税（0.1））</inlineHelpText>
    <label>総額請求金・契約金額（税込、メニュー）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>