force-app/main/default/objects/Menu__c/fields/current_lead__c.field-meta.xml
<CustomField>
    <fullName>current_lead__c</fullName>
    <label>現在のリード数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>