force-app/main/default/objects/Menu__c/fields/current_pv_all__c.field-meta.xml
<CustomField>
    <fullName>current_pv_all__c</fullName>
    <label>現在のPV（全て込み1P目）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>