force-app/main/default/objects/Menu__c/fields/current_pv_leading__c.field-meta.xml
<CustomField>
    <fullName>current_pv_leading__c</fullName>
    <label>現在のPV（誘導枠のみ1P目）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>