force-app/main/default/objects/Menu__c/fields/custom_opportunity__c.field-meta.xml
<CustomField>
    <fullName>custom_opportunity__c</fullName>
    <label>C商談</label>
    <referenceTo>CustomOpportunity__c</referenceTo>
    <relationshipLabel>メニュー</relationshipLabel>
    <relationshipName>ZhGB</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>