force-app/main/default/objects/Menu__c/fields/customers_type__c.field-meta.xml
<CustomField>
    <fullName>customers_type__c</fullName>
    <formula>IF ( CONTAINS ( TEXT ( custom_opportunity__r.agency_name__r.FlgAd__c ) , &quot;代理店&quot; ) , &quot;代理店&quot; , null )</formula>
    <label>代理店フラグ</label>
    <type>Text</type>
</CustomField>