force-app/main/default/objects/Menu__c/fields/delivery_time__c.field-meta.xml
<CustomField>
    <fullName>delivery_time__c</fullName>
    <label>編集部メール　配信時間帯</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10：30</fullName>
            </value>
            <value>
                <fullName>13：30</fullName>
            </value>
            <value>
                <fullName>16：30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>