force-app/main/default/objects/Menu__c/fields/dmp_product_fee__c.field-meta.xml
<CustomField>
    <fullName>dmp_product_fee__c</fullName>
    <label>受注制作費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>