force-app/main/default/objects/Menu__c/fields/douitsu_check__c.field-meta.xml
<CustomField>
    <fullName>douitsu_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>同一案件チェックボックス</label>
    <type>Checkbox</type>
</CustomField>