force-app/main/default/objects/Menu__c/fields/e_agency_name__c.field-meta.xml
<CustomField>
    <fullName>e_agency_name__c</fullName>
    <formula>custom_opportunity__r.agency_name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出力用_代理店社名</label>
    <type>Text</type>
</CustomField>