force-app/main/default/objects/Menu__c/fields/e_menu_Histories__c.field-meta.xml
<CustomField>
    <fullName>e_menu_Histories__c</fullName>
    <formula>&#39;https://cs5.lightning.force.com/lightning/r/&#39; + Id + &#39;/related/Histories/view&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出力用_メニューの履歴</label>
    <type>Text</type>
</CustomField>