force-app/main/default/objects/Menu__c/fields/e_product_code__c.field-meta.xml
<CustomField>
    <fullName>e_product_code__c</fullName>
    <formula>if(	product_code__c == null , product_code_formula__c ,				
			if(product_code_formula__c == null, product_code__c,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出力用_プロダクトコード</label>
    <type>Text</type>
</CustomField>