force-app/main/default/objects/Menu__c/fields/ebp_blbd_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_blbd_period__c</fullName>
    <label>基本パック以外_ビルボード（静止画） 期間</label>
    <type>Date</type>
</CustomField>