force-app/main/default/objects/Menu__c/fields/ebp_blbd_video_imp_grt__c.field-meta.xml
<CustomField>
    <fullName>ebp_blbd_video_imp_grt__c</fullName>
    <label>基本パック以外_ビルボード（動画） imp保証</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>