force-app/main/default/objects/Menu__c/fields/ebp_image_text_sp_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_image_text_sp_period__c</fullName>
    <label>基本パック以外_イメージ・テキストSP 期間</label>
    <type>Date</type>
</CustomField>