force-app/main/default/objects/Menu__c/fields/ebp_inread_video_pc_memo__c.field-meta.xml
<CustomField>
    <fullName>ebp_inread_video_pc_memo__c</fullName>
    <label>基本パック以外_インリード動画PC 備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>