force-app/main/default/objects/Menu__c/fields/ebp_inread_video_view_grt__c.field-meta.xml
<CustomField>
    <fullName>ebp_inread_video_view_grt__c</fullName>
    <label>基本パック以外_インリード動画PC view保証</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>