force-app/main/default/objects/Menu__c/fields/ebp_inter_pc_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_inter_pc_period__c</fullName>
    <label>基本パック以外_インタースティシャルPC 期間</label>
    <type>Date</type>
</CustomField>