force-app/main/default/objects/Menu__c/fields/ebp_inter_sp_period_grt__c.field-meta.xml
<CustomField>
    <fullName>ebp_inter_sp_period_grt__c</fullName>
    <label>基本パック以外_インタースティシャルSP 期間保証</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>