force-app/main/default/objects/Menu__c/fields/ebp_panel_pc_article_lead_memo__c.field-meta.xml
<CustomField>
    <fullName>ebp_panel_pc_article_lead_memo__c</fullName>
    <label>基本パック以外_パネルSP長期連載記事広告誘導 備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>