force-app/main/default/objects/Menu__c/fields/ebp_panel_pc_article_lead_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_panel_pc_article_lead_period__c</fullName>
    <label>基本パック以外_パネルSP長期連載記事広告誘導 期間</label>
    <type>Date</type>
</CustomField>