force-app/main/default/objects/Menu__c/fields/ebp_panel_sp_head_memo__c.field-meta.xml
<CustomField>
    <fullName>ebp_panel_sp_head_memo__c</fullName>
    <label>基本パック以外_パネルSPヘッダー 備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>