force-app/main/default/objects/Menu__c/fields/ebp_panel_sp_head_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_panel_sp_head_period__c</fullName>
    <label>基本パック以外_パネルSPヘッダー 期間</label>
    <type>Date</type>
</CustomField>