force-app/main/default/objects/Menu__c/fields/ebp_pc_index_memo__c.field-meta.xml
<CustomField>
    <fullName>ebp_pc_index_memo__c</fullName>
    <label>基本パック以外_PCインデックス 備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>