force-app/main/default/objects/Menu__c/fields/ebp_pc_trend_library_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_pc_trend_library_period__c</fullName>
    <label>基本パック以外_PCトレンドライブラリ 期間</label>
    <type>Date</type>
</CustomField>