force-app/main/default/objects/Menu__c/fields/ebp_rect_exp_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_rect_exp_period__c</fullName>
    <label>基本パック以外_レクタングルエキスパンド 期間</label>
    <type>Date</type>
</CustomField>