force-app/main/default/objects/Menu__c/fields/ebp_rect_pc_article_lead_imo_grt__c.field-meta.xml
<CustomField>
    <fullName>ebp_rect_pc_article_lead_imo_grt__c</fullName>
    <label>基本パック以外_レクタングルPC長期連載記事広告誘導 imp保証</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>