force-app/main/default/objects/Menu__c/fields/ebp_text_trend_watch_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_text_trend_watch_period__c</fullName>
    <label>基本パック以外_テキストPCトレンドウォッチ 期間</label>
    <type>Date</type>
</CustomField>