force-app/main/default/objects/Menu__c/fields/ebp_tgt_rect_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_tgt_rect_period__c</fullName>
    <label>基本パック以外_ターゲティングレクタングル 期間</label>
    <type>Date</type>
</CustomField>