force-app/main/default/objects/Menu__c/fields/ebp_toyo_edit_mail_assign__c.field-meta.xml
<CustomField>
    <fullName>ebp_toyo_edit_mail_assign__c</fullName>
    <label>基本パック以外_東洋経済オンライン編集部メール 何本目指定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>