force-app/main/default/objects/Menu__c/fields/ebp_toyo_edit_mail_period__c.field-meta.xml
<CustomField>
    <fullName>ebp_toyo_edit_mail_period__c</fullName>
    <label>基本パック以外_東洋経済オンライン編集部メール 期間</label>
    <type>Date</type>
</CustomField>