force-app/main/default/objects/Menu__c/fields/ebp_toyo_mail_time__c.field-meta.xml
<CustomField>
    <fullName>ebp_toyo_mail_time__c</fullName>
    <label>基本パック以外_東洋経済メール（全配信） 配信時間帯</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>13:30</fullName>
            </value>
            <value>
                <fullName>16:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>