force-app/main/default/objects/Menu__c/fields/end_date__c.field-meta.xml
<CustomField>
    <fullName>end_date__c</fullName>
    <label>終了日</label>
    <type>Date</type>
</CustomField>