force-app/main/default/objects/Menu__c/fields/event_date__c.field-meta.xml
<CustomField>
    <fullName>event_date__c</fullName>
    <label>開催日</label>
    <type>Date</type>
</CustomField>